@@ -1,3 +1,7 @@
+2015-07-30 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Nella gestione delle produzioni eliminato il campo titolo ed aggiunto nome scheda, codice di uscita e deadline.
+
 2015-07-10 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Abilitato il pulsante della eliminazione di una produzione, ma non ancora collegato alle funzioni.
